# gb15

./: .gitignore  CMakeLists.txt  LISCENCE.txt  README.md
CMake/: FindSDL2.cmake
frontend/: CMakeLists.txt  gb15.c
gb15/: CMakeLists.txt
gb15/include/gb15/: bios.h  cpu.h  gb15.h  gpu.h  lcd.h  memmap.h  mmu.h  oam.h  regfile.h  register.h  state.h  types.h
gb15/src/: bios.c  cpu.c  gpu.c  lcd.c  memmap.c  mmu.c  register.c  util.c  util.h
